# SWPatternProj1

./: .gitignore  CMakeLists.txt  FileReader.cpp  FileReader.h  FileReaderApp  FileReaderApp.cpp  Instruction - Compile and Run  README.md  README.txt  RecordReader.cpp  RecordReader.h  SearchApp  SearchApp.cpp  TextInput1000Words.txt  file_reader.cpp  main  main.cpp  output.txt  readerlib.cpp  readerlib.h  readme.txt  record_reader.cpp  result.txt
